proyecto final con un detalle más agregado

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -380,7 +380,7 @@ h4 {
 }
 
 .imput {
-  background-color: #96aa9a;
+  background-color: #c7D4ca;
   opacity: 0.6;
   padding: 20px 50px;
   width: 30%;
