--- a/scss/_tours.scss
+++ b/scss/_tours.scss
@@ -9,7 +9,7 @@
 }
 
 .imput {
-    background-color: $verde;
+    background-color: $verdeclaro;
     opacity: 0.6;
     padding: 20px 50px;
     width: 30%;
